Closed
Bug 1122805
Opened 9 years ago
Closed 8 years ago
[Marketplace][Text Selection] User is able to select text from the listing of apps causing marketplace to become unresponsive and eventually crash.
Categories
(Core :: DOM: Selection, defect, P1)
Tracking
()
People
(Reporter: jmitchell, Assigned: chenpighead)
References
()
Details
(Whiteboard: [3.0-Daily-Testing])
Attachments
(2 files, 2 obsolete files)
88.22 KB,
text/plain
|
Details | |
6.30 KB,
patch
|
bajaj
:
approval-mozilla-b2g37+
|
Details | Diff | Splinter Review |
Description: Using the new text selection features the user is able to select text from the Category Header (example: Fresh and New Apps or Popular All Time), listing of apps (App name, App Creator, Rating). Text can be highlighted blue. After a few seconds the app will not accept any user input except for scrolling the page. Clicking any icons, or menu words have no effect. After a few more seconds th app will crash. Repro Steps: 1) Update a Flame to 20150116002502 2) Open Marketplace App 3) Select the 'New' tab 4) Long press on 'Fresh and New Apps' Actual: Text becomes selected with "select all and copy options". If the user further interacts with these options (such as selecting all - the app can become unresponsive except for scrolling and will eventually (after 30-50 seconds) crash back to the homescreen. Expected: With the exception of the search bar, text will not be selectable. Environmental Variables: Device: Flame Master Build ID: 20150116002502 Gaia: 2f916cdba7305b51a72482b6bfe860c5b8924f9c Gecko: b4c7c83a44a5 Gonk: a814b2e2dfdda7140cb3a357617dc4fbb1435e76 Version: 37.0a2 (Master) Firmware Version: V18d User Agent: Mozilla/5.0 (Mobile; rv:37.0) Gecko/37.0 Firefox/37.0 Repro frequency: 8/9 See attached: logcat, video: http://youtu.be/U-8VmKEL7lg ----------------------------------------------------------------------------------------------- This issue repros' on 2.2 (v18d-1) and 2.2 (v18d) Prior to 2.2 text selection was not implemented. Device: Flame 2.2 (KK - Nightly - Full-Flashed) Build ID: 20150116002502 Gaia: 2f916cdba7305b51a72482b6bfe860c5b8924f9c Gecko: b4c7c83a44a5 Gonk: a814b2e2dfdda7140cb3a357617dc4fbb1435e76 Version: 37.0a2 (Master) Firmware Version: V18d-1 User Agent: Mozilla/5.0 (Mobile; rv:37.0) Gecko/37.0 Firefox/37.0 Device: Flame 2.2 (KK - Nightly - Full-Flashed) Build ID: 20150116002502 Gaia: 2f916cdba7305b51a72482b6bfe860c5b8924f9c Gecko: b4c7c83a44a5 Gonk: a814b2e2dfdda7140cb3a357617dc4fbb1435e76 Version: 37.0a2 (Master) Firmware Version: V18d User Agent: Mozilla/5.0 (Mobile; rv:37.0) Gecko/37.0 Firefox/37.0
Reporter | ||
Updated•9 years ago
|
QA Whiteboard: [QAnalyst-Triage?]
Flags: needinfo?(ktucker)
Updated•9 years ago
|
Component: Consumer Pages → General
Product: Marketplace → Firefox OS
Version: Avenir → unspecified
Comment 1•9 years ago
|
||
Nominating this 2.2? since the user loses functionality and the marketplace will close out.
blocking-b2g: --- → 2.2?
QA Whiteboard: [QAnalyst-Triage?] → [QAnalyst-Triage+]
status-b2g-v2.2:
--- → affected
status-b2g-master:
--- → affected
Flags: needinfo?(ktucker)
Comment 2•9 years ago
|
||
Triage: blocker. We'll take a look from Gecko first.
Assignee | ||
Comment 3•8 years ago
|
||
I found that the crash is caused by infinite triggering reflows. It is known that selection carets' positions are set to the start/end positions in canvas while selecting all. During the setting process, the style of canvas (style.width in this case) is changed repeatedly. So, I changed carets' style.position from "absolute" to "fixed" to avoid modifying canvas's style, which also avoid unnecessary reflows. To maintain the correct positions of carets, selection/touch carets' update position function should be patched as well.
Attachment #8557725 -
Flags: review?(roc)
Updated•8 years ago
|
Component: General → Selection
Product: Firefox OS → Core
Version: unspecified → Trunk
Assignee | ||
Comment 4•8 years ago
|
||
try result: https://treeherder.mozilla.org/#/jobs?repo=try&revision=894179c46823
Attachment #8557725 -
Flags: review?(roc) → review+
Assignee | ||
Comment 5•8 years ago
|
||
CSS rules in ua.css are updated. Touch/selection carets are created in 2-level divs. Since we update carets' positions by setting the positions of outer divs, we need to make sure the inner divs, which contain the actual caret images, will always stick with the outer divs.
Attachment #8557725 -
Attachment is obsolete: true
Assignee | ||
Comment 6•8 years ago
|
||
Comment on attachment 8559672 [details] [diff] [review] Update carets' positions based on coordinates of the root frame. r=roc (v2, carry r+) NOTE: Please see https://wiki.mozilla.org/Release_Management/B2G_Landing to better understand the B2G approval process and landings. [Approval Request Comment] Bug caused by (feature/regressing bug #): User impact if declined: apps (marketplace, browser,etc.) may be crashed when selecting all under some circumstances Testing completed: Try is positive on master try Risk to taking this patch (and alternatives if risky): low risk String or UUID changes made by this patch: not available
Attachment #8559672 -
Flags: approval-mozilla-b2g37?
Assignee | ||
Updated•8 years ago
|
Keywords: checkin-needed
Assignee | ||
Comment 7•8 years ago
|
||
Remove codes for printing debug logs.
Attachment #8559672 -
Attachment is obsolete: true
Attachment #8559672 -
Flags: approval-mozilla-b2g37?
Assignee | ||
Comment 8•8 years ago
|
||
Comment on attachment 8559685 [details] [diff] [review] Update carets' positions based on coordinates of the root frame. r=roc (v3, carry r+) NOTE: Please see https://wiki.mozilla.org/Release_Management/B2G_Landing to better understand the B2G approval process and landings. [Approval Request Comment] Bug caused by (feature/regressing bug #): User impact if declined: apps (marketplace, browser,etc.) may be crashed when selecting all under some circumstances Testing completed: Try is positive on master try Risk to taking this patch (and alternatives if risky): low risk String or UUID changes made by this patch: not available
Attachment #8559685 -
Flags: approval-mozilla-b2g37?
Comment 9•8 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/3516564ed401
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/3516564ed401
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox38:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
Updated•8 years ago
|
Attachment #8559685 -
Flags: approval-mozilla-b2g37? → approval-mozilla-b2g37+
Comment 11•8 years ago
|
||
https://hg.mozilla.org/releases/mozilla-b2g37_v2_2/rev/418673bfce1f
status-firefox36:
--- → wontfix
status-firefox37:
--- → wontfix
Comment 12•8 years ago
|
||
This issue is verified fixed on the latest Nightly Flame 3.0 and 2.2 builds. Actual Results: Selecting text and performing copy/paste actions does not adversly affect the marketplace app. Environmental Variables: Device: Flame 3.0 BuildID: 20150302010223 Gaia: f34ce82a840ad3c0aed3bfff18517b3f6a0eb37f Gecko: eea6188b9b05 Gonk: e7c90613521145db090dd24147afd5ceb5703190 Version: 39.0a1 (3.0) Firmware Version: v18D-1 User Agent: Mozilla/5.0 (Mobile; rv:39.0) Gecko/39.0 Firefox/39.0 Environmental Variables: Device: Flame 2.2 BuildID: 20150302002504 Gaia: 77609916ca5ab721150fab2b7bc5c37f43ee3a5a Gecko: 27ab8aa34201 Gonk: e7c90613521145db090dd24147afd5ceb5703190 Version: 37.0 (2.2) Firmware Version: v18D-1 User Agent: Mozilla/5.0 (Mobile; rv:37.0) Gecko/37.0 Firefox/37.0
Status: RESOLVED → VERIFIED
QA Whiteboard: [QAnalyst-Triage+] → [QAnalyst-Triage?]
Flags: needinfo?(ktucker)
Updated•8 years ago
|
QA Whiteboard: [QAnalyst-Triage?] → [QAnalyst-Triage+]
Flags: needinfo?(ktucker)
You need to log in
before you can comment on or make changes to this bug.
Description
•