Bug 1122805 - v3 Update carets' positions based on coordinates of the root frame. r=roc